novo exercício novo e ajustes

--- a/HTML-CSS/exercicios/ex002/index.html
+++ b/HTML-CSS/exercicios/ex002/index.html
@@ -9,13 +9,13 @@
 <body>
   <h1>Carros e Bicicletas</h1>
   <div>
-    <h2>Carro:</h2> <strong class="forte">R$ 1999</strong>
-  <p>Carro modelo <strong>2045</strong>, com <strong>200km</strong> rodados.</p>
+    <h2>Carro:<span> R$ 1999</span> </h2>
+  <p>Carro modelo <span>2045</span>, com <span>200km</span> rodados.</p>
     <a href="#">Comprar Carro</a>
   </div>
   <div>
-    <h2>Bicicleta:</h2> <strong class="forte">R$ 199</strong>
-    <p>Bicicleta modelo <strong>2050</strong>, com<strong> 20km </strong>rodados.</p>
+    <h2>Bicicleta:<span> R$ 199</span> </h2>
+    <p>Bicicleta modelo <span>2050</span>, com<span> 20km </span>rodados.</p>
     <a href="#">Comprar Bicicleta</a>
   </div>
 </body>
