ajustes e aprendizado sobre dom

--- a/JavaScrpit/dominicial/selecionardom/index.html
+++ b/JavaScrpit/dominicial/selecionardom/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Animais Fantásticos</title>
+  <title>Selecionar o DOM</title>
 </head>
 <body>
   <nav class="menu">
@@ -23,27 +23,27 @@ Animais Fantásticos
 <ul class="animais-lista">
   
   <li>
-  <img src="imagem1.jpg"">
+  <img src="img/imagem1.jpg"">
   </li>
   
   <li>
-  <img src="imagem2.jpg"">
+  <img src="img/imagem2.jpg"">
   </li>
   
   <li>
-  <img src="imagem3.jpg"">
+  <img src="img/imagem3.jpg"">
   </li>
   
   <li>
-  <img src="imagem4.jpg"">
+  <img src="img/imagem4.jpg"">
   </li>
   
   <li>
-  <img src="imagem5.jpg"">
+  <img src="img/imagem5.jpg"">
   </li>
   
   <li>
-  <img src="imagem6.jpg"">
+  <img src="img/imagem6.jpg"">
   </li>
 </ul>
 
@@ -122,7 +122,7 @@ Animais Fantásticos
 <h1 class="titulo">Contato</h1>
 <div class="mapa">
 
-  <img src="mapa.png">
+  <img src="img/mapa.png">
 
 </div>
 
