eventos, manipulação e ajustes

--- a/JavaScrpit/dominicial/classeseatributos copy/index.html
+++ b/JavaScrpit/dominicial/classeseatributos copy/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Eventos</title>
+  <title>Transversing e Manipulação
+  </title>
 </head>
 <body>
   <nav class="menu">
@@ -12,10 +13,10 @@
       <li><a href=#aniamais">Animais</a></li>
       <li><a href="#faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
-      <li><a href= 'https://www.google.com'>Dev → </a></li>
+      <li><a href="#dev">Dev → </a></li>
   </nav>
 
-<section class = "grid-section animais" id="animais">
+<section class = "grid-section animais" id="animais" data-texto="teste">
 
 <h1 class="titulo">
 Animais Fantásticos
