--- a/JavaScrpit/dominicial/classeseatributos copy/exercicio/index.html
+++ b/JavaScrpit/dominicial/classeseatributos copy/exercicio/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Eventos</title>
+  <title>Classes e Atributos</title>
 </head>
 <body>
   <nav class="menu">
@@ -12,7 +12,7 @@
       <li><a href=#aniamais">Animais</a></li>
       <li><a href="#faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
-      <li><a href= 'https://www.google.com'>Dev → </a></li>
+      <li><a href="#dev">Dev → </a></li>
   </nav>
 
 <section class = "grid-section animais" id="animais">
