--- a/JavaScrpit/objetos/nativohostuser/index.html
+++ b/JavaScrpit/objetos/nativohostuser/index.html
@@ -3,16 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Protype
+  <title>Nativos, Host e User
   </title>
 </head>
 <body>
-
-<ul>
-  <li>Item 1</li>
-  <li>Item 2</li>
-  <li>Item 3</li>
-</ul>  
 
 
   <script src="script.js"></script>
